[package]
name = "mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
dodge = { path = ".." } # ToDo
bevy = { version = "0.12", default-features = false }

# As long as Kira doesn't expose a feature for this, we need to enable it our self
# See https://github.com/tesselode/kira/pull/51
[target."cfg(target_os = \"android\")".dependencies.cpal]
version = "0.15"
features = ["oboe-shared-stdcxx"]

[package.metadata.android]
package = "me.engodev.dodge"
apk_name = "Dodge"
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Dodge" # ToDo
